hphp/hack/test/typecheck/attributes/memoize_lsb_abstract_method.php.exp
File "memoize_lsb_abstract_method.php", line 5, characters 35-35:
Abstract methods cannot be memoized. (NastCheck[3087])
File "memoize_lsb_abstract_method.php", line 5, characters 35-35:
`memoize` is not allowed on static methods in classes that aren't final  (NastCheck[3041])
